project done, pre-heroku deploy

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node server/index.js",
-    "localstart": "MONGO_URL=mongodb://localhost/hapi-prototype PORT=3333 nodemon -e js,jade server/index.js",
+    "localstart": "MONGO_URL=mongodb://localhost/palbm PORT=3000 nodemon -e js,jade server/index.js",
     "clean": "rm -rf node_modules && rm -rf public && npm install && bower install && gulp build",
     "postinstall": "bower install && gulp build"
   },
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
+    "aws-sdk": "^2.1.13",
     "good": "^5.1.1",
     "good-console": "^4.1.0",
     "hapi": "^8.2.0",
